# playwright-python

./: .dockerignore  .gitattributes  .gitignore  .pre-commit-config.yaml  .windsurfrules  2211.patch  CLAUDE.md  CONTRIBUTING.md  DRIVER_SHA  DRIVER_VERSION  Dockerfile  MANIFEST.in  README.AKASA.md  README.md  ROLLING.md  SECURITY.md  SUPPORT.md  api.json  async_api.html  bake.py  browser_context.html  browser_type.html  build_driver.py  build_package.py  build_patched.py  chromium_browser_context.html  client.py  conda_build_config.yaml  conda_build_config_linux_aarch64.yaml  conda_build_config_osx_arm64.yaml  connection.html  console_message.html  dialog.html  download.html  element_handle.html  file_chooser.html  frame.html  index.html  js_handle.html  local-requirements.txt  (+16 more)
.azure-pipelines/: publish.yml
.github/: dependabot.yml  labeler.yml
.github/ISSUE_TEMPLATE/: bug.md  bug.yml  config.yml  documentation.yml  regression.md  regression.yml
.github/workflows/: ci.yml  deploy-docs.yml  docker.yml  labeler.yml  publish.yml  publish_canary_docker.yml  publish_docker.yml  publish_release_docker.yml  test_docker.yml  trigger_internal_tests.yml
RPA-AI/: base_llm_bot.py  demo.py  dev-guide.md  gemini-home.html  google_ai_studio.py  llm_bot_template.py  main.py  pay_template.html
RPA-AI/auto_rpa/: base_auto_rpa.py
RPA-AI/bots/: base_job_bot.py  boss_bot.py  ganji_bot.py
RPA-AI/config/: billing_rules.json
RPA-AI/core/: config.py  logging_config.py
RPA-AI/docs/: 推荐分销系统说明.md  支付系统说明.md  计费系统说明.md
RPA-AI/examples/: auto_rpa_example.py  payment_example.py  survey_example.py
RPA-AI/payment/: payment_processor.py
RPA-AI/routers/: ai_chat.py  job_search.py  payment.py  survey.py
RPA-AI/services/: auto_rpa_service.py  billing_service.py  job_service.py  llm_service.py  referral_service.py
RPA-AI/survey/: survey_generator.py
RPA-AI/templates/: payment_simple.html  survey_template.html
async_api/: index.html
buildbots/: test-package-installations.sh  test-reference-count.sh  test-sync-generation.sh
buildbots/assets/: stub.py  test-reference-count-async.py
docker/: Dockerfile
docs/: development.md
driver/: main.js  package-lock.json  package.json
examples/todomvc/: requirements.txt
playwright/: __init__.py  __main__.py  _accessibility.py  _api_types.py  _async_base.py  _browser.py  _browser_context.py  _browser_type.py  _cdp_session.py  _chromium_browser_context.py  _connection.py  _console_message.py  _dialog.py  _download.py  _element_handle.py  _file_chooser.py  _frame.py  _helper.py  _impl_to_api_mapping.py  _input.py  _js_handle.py  _main.py  _network.py  _object_factory.py  _page.py  _playwright.py  _selectors.py  _sync_base.py  _types.py  _video.py  _wait_helper.py  accessibility.html  accessibility.py  async_api.py  async_base.html  async_base.py  browser.html  browser.py  browser_context.py  browser_server.py  (+46 more)
playwright/_impl/: __init__.py  _accessibility.py  _api_structures.py  _api_types.py  _artifact.py  _assertions.py  _async_base.py  _browser.py  _browser_context.py  _browser_type.py  _cdp_session.py  _chromium_browser_context.py  _clock.py  _connection.py  _console_message.py  _credentials.py  _debugger.py  _devices_generated.py  _dialog.py  _disposable.py  _download.py  _driver.py  _element_handle.py  _errors.py  _event_context_manager.py  _event_emitter.py  _fetch.py  _file_chooser.py  _form_data.py  _frame.py  _glob.py  _har_router.py  _helper.py  _impl_to_api_mapping.py  _input.py  _js_handle.py  _json_pipe.py  _local_utils.py  _locator.py  _logger.py  (+26 more)
playwright/async_api/: __init__.py  _context_manager.py  _generated.py
playwright/drivers/: browsers.json
playwright/sync_api/: __init__.py  _context_manager.py  _generated.py  _py37ThreadedChildWatcher.py
playwright_web/: __init__.py  accessibility.py  browser.py  browser_context.py  browser_server.py  browser_type.py  connection.py  console_message.py  dialog.py  download.py  element_handle.py  file_chooser.py  frame.py  helper.py  input.py  js_handle.py  network.py  object_factory.py  page.py  playwright.py  transport.py  worker.py
scripts/: build_driver.py  build_driver.sh  documentation_provider.py  example_async.py  example_sync.py  expected_api_mismatch.txt  generate_api.py  generate_async_api.py  generate_devices.py  generate_sync_api.py  postPdoc3Generation.js  report_downstream_test_diffs.py  test_to_python.js  update_api.sh  update_node_version.py  update_versions.py  validate_api.py
sync_api/: index.html
test/: conftest.py  test.py  test_add_init_script.py  test_click.py  test_evaluate.py  test_evaluation.py  test_fill.py  test_frames.py  test_jshandle.py  test_keyboard.py  test_network.py
test/assets/: html.py
tests/: conftest.py  report_downstream_test_diffs.py  server.py  test_accessibility.py  test_add_init_script.py  test_browsercontext.py  test_check.py  test_click.py  test_console.py  test_download.py  test_element_handle.py  test_evaluate.py  test_fill.py  test_frames.py  test_generate_sync_api.py  test_generation.py  test_generation_scripts.py  test_ignore_default_args_bool.py  test_ignore_https_errors.py  test_input.py  test_installation.py  test_interception.py  test_jshandle.py  test_keyboard.py  test_launcher.py  test_navigation.py  test_network.py  test_page.py  test_pdf.py  test_popup.py  test_pyinstaller.py  test_queryselector.py  test_reference_count_async.py  test_scripts_documentation_provider.py  test_sync.py  test_worker.py  utils.py
tests/assets/: beforeunload.html  client.py  file-to-upload.txt  global-var.html  har-fulfill.har  har-redirect.har  har-sha1.har  headings.html  injectedfile.js  playground.html  sectionselectorengine.js
tests/async/: conftest.py  test_accessibility.py  test_add_init_script.py  test_assertions.py  test_asyncio.py  test_atexit_cleanup.py  test_browser.py  test_browser_bind.py  test_browsercontext.py  test_browsercontext_add_cookies.py  test_browsercontext_clearcookies.py  test_browsercontext_client_certificates.py  test_browsercontext_cookies.py  (+89 more)
undetected_playwright/: __init__.py  __main__.py
(+158 files in other folders)
