[build-system]
requires = ["setuptools==68.2.2", "setuptools-scm==8.0.4", "wheel==0.41.2", "auditwheel==5.4.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools_scm]
version_file = "playwright/_repo_version.py"

[tool.pytest.ini_options]
addopts = "-Wall -rsx -vv -s"
markers = [
    "skip_browser",
    "only_browser",
    "skip_platform",
    "only_platform"
]
junit_family = "xunit2"
asyncio_mode = "auto"

[tool.mypy]
ignore_missing_imports = true
python_version = "3.8"
warn_unused_ignores = false
warn_redundant_casts = true
warn_unused_configs = true
check_untyped_defs = true
disallow_untyped_defs = true
no_implicit_optional = false

[[tool.mypy.overrides]]
module = "tests/async.*"
ignore_errors = true

[tool.isort]
profile = "black"

[tool.pyright]
include = ["playwright", "tests/sync"]
ignore = ["tests/async/", "scripts/", "examples/"]
pythonVersion = "3.8"
reportMissingImports = false
reportTypedDictNotRequiredAccess = false
reportCallInDefaultInitializer = true
reportOptionalSubscript = false
reportUnboundVariable = false
strictParameterNoneValue = false
